// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process 1.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.58,
    "vehicle_brand": 0.96,
    "vehicle_car_weight": 0.77,
    "vehicle_chassis_location": 0.89,
    "vehicle_chassis_number": 0.69,
    "vehicle_color": 0.8,
    "vehicle_displacement": 0.96,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.67,
    "vehicle_engine_number": 0.93,
    "vehicle_fuel_type": 0.94,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0.85,
    "vehicle_hp": 0.98,
    "vehicle_license_number": 0.73,
    "vehicle_license_province": 0.87,
    "vehicle_model": 0.93,
    "vehicle_model_year": 0.99,
    "vehicle_piston": 1,
    "vehicle_register_date": 0.92,
    "vehicle_seat_number": 0.93,
    "vehicle_shaft": 0.91,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.69,
    "vehicle_type": 0.94,
  },
  "vehicle_body_type": "นั่งสามตอน",
  "vehicle_brand": "MITSUBISHI",
  "vehicle_car_weight": "1000",
  "vehicle_chassis_location": "หลังขวา",
  "vehicle_chassis_number": "MITGUKR1OHH005341",
  "vehicle_color": "เทา",
  "vehicle_displacement": "2442",
  "vehicle_engine_brand": "MITSUBISHI",
  "vehicle_engine_location": "ขวาเครื่อง",
  "vehicle_engine_number": "4N15UBR8093",
  "vehicle_fuel_type": "ดีเซล",
  "vehicle_gas_number": "",
  "vehicle_gvw": "1900",
  "vehicle_hp": "181",
  "vehicle_license_number": "617",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "PAJERO SPORT",
  "vehicle_model_year": "2017",
  "vehicle_piston": "4",
  "vehicle_register_date": "26 มกราคม 2561",
  "vehicle_seat_number": "7",
  "vehicle_shaft": "2 เพลา 4 ล้อ ยาง 4 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "“1",
  "vehicle_type": "รถยนต์นั่งส่วนบุคคลไม่เกิน 7 คน",
}
`;

exports[`process 2.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.58,
    "vehicle_brand": 0.95,
    "vehicle_car_weight": 0.76,
    "vehicle_chassis_location": 0.74,
    "vehicle_chassis_number": 0.79,
    "vehicle_color": 0.89,
    "vehicle_displacement": 0.97,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.63,
    "vehicle_engine_number": 0.91,
    "vehicle_fuel_type": 0.62,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0.81,
    "vehicle_hp": 0.98,
    "vehicle_license_number": 0.65,
    "vehicle_license_province": 0.89,
    "vehicle_model": 0.96,
    "vehicle_model_year": 0.96,
    "vehicle_piston": 0.99,
    "vehicle_register_date": 0.97,
    "vehicle_seat_number": 0.92,
    "vehicle_shaft": 0.93,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.45,
    "vehicle_type": 0.92,
  },
  "vehicle_body_type": "นั่งสามตอน",
  "vehicle_brand": "MITSUBISHI",
  "vehicle_car_weight": "1000",
  "vehicle_chassis_location": "หลังขวา",
  "vehicle_chassis_number": "HMIGUKR1oHH005341",
  "vehicle_color": "เทา",
  "vehicle_displacement": "2442",
  "vehicle_engine_brand": "MITSUBISHI",
  "vehicle_engine_location": "ขวาเครื่อง",
  "vehicle_engine_number": "4N15UBR8093",
  "vehicle_fuel_type": "ดีเซล -",
  "vehicle_gas_number": "",
  "vehicle_gvw": "1900",
  "vehicle_hp": "181",
  "vehicle_license_number": "6ช 617",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "PAJERO SPORT",
  "vehicle_model_year": "2017",
  "vehicle_piston": "4",
  "vehicle_register_date": "26 มกราคม 2561",
  "vehicle_seat_number": "7",
  "vehicle_shaft": "2 เพลา 4 ล้อ ยาง 4 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "51",
  "vehicle_type": "รถยนต์นั่งส่วนบุคคลไม่เกิน 7 คน",
}
`;

exports[`process 3.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.78,
    "vehicle_brand": 0.77,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.67,
    "vehicle_chassis_number": 0.62,
    "vehicle_color": 0,
    "vehicle_displacement": 0.72,
    "vehicle_engine_brand": 0.55,
    "vehicle_engine_location": 0.8,
    "vehicle_engine_number": 0.82,
    "vehicle_fuel_type": 0.75,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.71,
    "vehicle_license_province": 0.9,
    "vehicle_model": 0.94,
    "vehicle_model_year": 0.97,
    "vehicle_piston": 0.99,
    "vehicle_register_date": 0.96,
    "vehicle_seat_number": 0,
    "vehicle_shaft": 0.76,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.75,
    "vehicle_type": 0.57,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "HONDA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "อยู่ที่ใต้ที่นั่ง",
  "vehicle_chassis_number": "ALIJF350XKS629846",
  "vehicle_color": "",
  "vehicle_displacement": "124.88",
  "vehicle_engine_brand": ": HONDA",
  "vehicle_engine_location": "ช้ายเครื่อง",
  "vehicle_engine_number": "JF35E-0229846",
  "vehicle_fuel_type": "เบนซิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "9กร 7876",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "CLICK 125 I",
  "vehicle_model_year": "2019",
  "vehicle_piston": "1",
  "vehicle_register_date": "11 มิถุนายน 2562",
  "vehicle_seat_number": "",
  "vehicle_shaft": "- เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์2",
}
`;

exports[`process 4.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.72,
    "vehicle_brand": 0.65,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.86,
    "vehicle_chassis_number": 0.94,
    "vehicle_color": 0.94,
    "vehicle_displacement": 0.9,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.83,
    "vehicle_engine_number": 0.95,
    "vehicle_fuel_type": 0.77,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.81,
    "vehicle_license_province": 0.9,
    "vehicle_model": 0.97,
    "vehicle_model_year": 0.99,
    "vehicle_piston": 1,
    "vehicle_register_date": 0.96,
    "vehicle_seat_number": 0.99,
    "vehicle_shaft": 0.98,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.99,
    "vehicle_type": 0.98,
  },
  "vehicle_body_type": "านยนต์",
  "vehicle_brand": "HONDA ,",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "ใต้ที่นั่ง",
  "vehicle_chassis_number": "HLHJF350XIK5629846",
  "vehicle_color": "ดำ",
  "vehicle_displacement": "124.88",
  "vehicle_engine_brand": "HONDA",
  "vehicle_engine_location": "ช้ายเครื่อง",
  "vehicle_engine_number": "JF35E-0229846",
  "vehicle_fuel_type": "เขนชิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "9กร 7876",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "CLICK 125 I",
  "vehicle_model_year": "2019",
  "vehicle_piston": "1",
  "vehicle_register_date": "11 มิถุนายน 2562",
  "vehicle_seat_number": "2",
  "vehicle_shaft": "- เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 5.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.45,
    "vehicle_brand": 0.95,
    "vehicle_car_weight": 0.83,
    "vehicle_chassis_location": 0.73,
    "vehicle_chassis_number": 0.71,
    "vehicle_color": 0.98,
    "vehicle_displacement": 0.97,
    "vehicle_engine_brand": 0.96,
    "vehicle_engine_location": 0.45,
    "vehicle_engine_number": 0.69,
    "vehicle_fuel_type": 0,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0.93,
    "vehicle_hp": 0.97,
    "vehicle_license_number": 0.84,
    "vehicle_license_province": 0.86,
    "vehicle_model": 0.86,
    "vehicle_model_year": 0.99,
    "vehicle_piston": 0.98,
    "vehicle_register_date": 0.87,
    "vehicle_seat_number": 0.63,
    "vehicle_shaft": 0.98,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.41,
    "vehicle_type": 0.89,
  },
  "vehicle_body_type": "ฝั่งสามตอน",
  "vehicle_brand": "MITSUBISHI",
  "vehicle_car_weight": "1900",
  "vehicle_chassis_location": "หลังขวา",
  "vehicle_chassis_number": "แNTUKR1on1005341.",
  "vehicle_color": "เทา",
  "vehicle_displacement": "2442",
  "vehicle_engine_brand": "MITSUBISHI",
  "vehicle_engine_location": "ชวาเหวี่ยง",
  "vehicle_engine_number": "4Ni5UER8093",
  "vehicle_fuel_type": "",
  "vehicle_gas_number": "",
  "vehicle_gvw": "1900",
  "vehicle_hp": "181",
  "vehicle_license_number": "6 617",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "PAJERO SPORT",
  "vehicle_model_year": "2017",
  "vehicle_piston": "4",
  "vehicle_register_date": "26 มกราคม 2561",
  "vehicle_seat_number": "7",
  "vehicle_shaft": "2 เพลา 4 ล้อ ยาง 4 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "51",
  "vehicle_type": "รถยนต์นั่งส่วนบุคคลไม่เกิน 7 คน",
}
`;

exports[`process 6.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.82,
    "vehicle_brand": 0.91,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.25,
    "vehicle_chassis_number": 0.81,
    "vehicle_color": 0,
    "vehicle_displacement": 0,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.46,
    "vehicle_engine_number": 0.8,
    "vehicle_fuel_type": 0.68,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0,
    "vehicle_license_province": 0.92,
    "vehicle_model": 0.95,
    "vehicle_model_year": 0.6,
    "vehicle_piston": 0,
    "vehicle_register_date": 0.71,
    "vehicle_seat_number": 0,
    "vehicle_shaft": 0.84,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0,
    "vehicle_type": 0.87,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "HONDA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "โตเกง",
  "vehicle_chassis_number": "HLHJF350XK5629846",
  "vehicle_color": "",
  "vehicle_displacement": "",
  "vehicle_engine_brand": "HONDA",
  "vehicle_engine_location": "เข้ายเลรอง",
  "vehicle_engine_number": "JT35E-022546",
  "vehicle_fuel_type": "เบนซิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "CLICK 125 1",
  "vehicle_model_year": "2013",
  "vehicle_piston": "",
  "vehicle_register_date": "11 มิถุนายน 2552",
  "vehicle_seat_number": "",
  "vehicle_shaft": "- เพลา 2 ล้อ ยาง 2 เส้น2",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 7.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.99,
    "vehicle_brand": 0.95,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.38,
    "vehicle_chassis_number": 0.87,
    "vehicle_color": 0.26,
    "vehicle_displacement": 0.96,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.88,
    "vehicle_engine_number": 0.72,
    "vehicle_fuel_type": 0.79,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.83,
    "vehicle_license_province": 0.96,
    "vehicle_model": 0.96,
    "vehicle_model_year": 1,
    "vehicle_piston": 0.95,
    "vehicle_register_date": 0.97,
    "vehicle_seat_number": 0.99,
    "vehicle_shaft": 0.98,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.95,
    "vehicle_type": 0.99,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "YAMAHA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "ใต้ที่นั่ง",
  "vehicle_chassis_number": "MH3RG472111001906",
  "vehicle_color": "การ",
  "vehicle_displacement": "155",
  "vehicle_engine_brand": "YAMAHA",
  "vehicle_engine_location": "ช้ายเครื่อง",
  "vehicle_engine_number": "G3JEE-0012705",
  "vehicle_fuel_type": "เบนซิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "5กฮ 908",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "YZF-R15",
  "vehicle_model_year": "2017",
  "vehicle_piston": "1",
  "vehicle_register_date": "24 กรกฎาคม 2560",
  "vehicle_seat_number": "2",
  "vehicle_shaft": "2 เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 8.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.7,
    "vehicle_brand": 0.97,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.82,
    "vehicle_chassis_number": 0.78,
    "vehicle_color": 0.71,
    "vehicle_displacement": 0.95,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.76,
    "vehicle_engine_number": 0.71,
    "vehicle_fuel_type": 0.5,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.78,
    "vehicle_license_province": 0.81,
    "vehicle_model": 0.36,
    "vehicle_model_year": 0.99,
    "vehicle_piston": 0.81,
    "vehicle_register_date": 0.97,
    "vehicle_seat_number": 0.65,
    "vehicle_shaft": 0.93,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.98,
    "vehicle_type": 0.98,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "YAMAHA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": ",ใต้ที่นั่ง",
  "vehicle_chassis_number": "HH3RG472111001906",
  "vehicle_color": "ดา",
  "vehicle_displacement": "155",
  "vehicle_engine_brand": "YAMAHA",
  "vehicle_engine_location": "ซ้ายเครื่อง",
  "vehicle_engine_number": "G3JSE-0012705",
  "vehicle_fuel_type": "เขนชิ้น",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "5กช 808",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "YP 5",
  "vehicle_model_year": "2017",
  "vehicle_piston": "1",
  "vehicle_register_date": "24 กรกฎาคม 2560",
  "vehicle_seat_number": "2 คน",
  "vehicle_shaft": "2 เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 12.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.98,
    "vehicle_brand": 0.93,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.79,
    "vehicle_chassis_number": 0.92,
    "vehicle_color": 0.96,
    "vehicle_displacement": 0.98,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.8,
    "vehicle_engine_number": 0.91,
    "vehicle_fuel_type": 0.57,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.82,
    "vehicle_license_province": 0.95,
    "vehicle_model": 0.99,
    "vehicle_model_year": 0.91,
    "vehicle_piston": 0.97,
    "vehicle_register_date": 0.98,
    "vehicle_seat_number": 0.96,
    "vehicle_shaft": 0.99,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.99,
    "vehicle_type": 0.98,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "YAMAHA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "ใต้ที่นั่ง",
  "vehicle_chassis_number": "MH3RG472111001906",
  "vehicle_color": "ดำ",
  "vehicle_displacement": "155",
  "vehicle_engine_brand": "YAMAHA",
  "vehicle_engine_location": "ซ้ายเครื่อง",
  "vehicle_engine_number": "G3J6E-0012705",
  "vehicle_fuel_type": "เขนชิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "5กฮ 908",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "YZF-R15",
  "vehicle_model_year": "2017",
  "vehicle_piston": "1",
  "vehicle_register_date": "24 กรกฎาคม 2560",
  "vehicle_seat_number": "2",
  "vehicle_shaft": "2 เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 13.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.83,
    "vehicle_brand": 0.99,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.83,
    "vehicle_chassis_number": 0.56,
    "vehicle_color": 0.99,
    "vehicle_displacement": 0.92,
    "vehicle_engine_brand": 0.89,
    "vehicle_engine_location": 0.85,
    "vehicle_engine_number": 0.85,
    "vehicle_fuel_type": 0.83,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.93,
    "vehicle_license_province": 0.99,
    "vehicle_model": 0.96,
    "vehicle_model_year": 0.99,
    "vehicle_piston": 0.98,
    "vehicle_register_date": 0.89,
    "vehicle_seat_number": 0.93,
    "vehicle_shaft": 0.96,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.92,
    "vehicle_type": 0.96,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "HONDA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "ใต้ที่นั่ง",
  "vehicle_chassis_number": "MLHJF350XK5629846 .",
  "vehicle_color": "ดำ",
  "vehicle_displacement": "124.88",
  "vehicle_engine_brand": "HONDA",
  "vehicle_engine_location": "ช้ายเครื่อง",
  "vehicle_engine_number": "JF35E-0229846",
  "vehicle_fuel_type": "เขนชิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "กร 7876",
  "vehicle_license_province": "กรุงเทพมหานคร",
  "vehicle_model": "CLICK 125 1",
  "vehicle_model_year": "2019",
  "vehicle_piston": "1",
  "vehicle_register_date": "11 มิถุนายน 2552",
  "vehicle_seat_number": "2",
  "vehicle_shaft": "- เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;

exports[`process 14.json return correctly 1`] = `
Object {
  "confidence": Object {
    "vehicle_body_type": 0.93,
    "vehicle_brand": 0.97,
    "vehicle_car_weight": 0,
    "vehicle_chassis_location": 0.64,
    "vehicle_chassis_number": 0.94,
    "vehicle_color": 0.95,
    "vehicle_displacement": 0.94,
    "vehicle_engine_brand": 0.99,
    "vehicle_engine_location": 0.82,
    "vehicle_engine_number": 0.91,
    "vehicle_fuel_type": 0.73,
    "vehicle_gas_number": 0,
    "vehicle_gvw": 0,
    "vehicle_hp": 0,
    "vehicle_license_number": 0.65,
    "vehicle_license_province": 0.86,
    "vehicle_model": 0.92,
    "vehicle_model_year": 0.98,
    "vehicle_piston": 0.92,
    "vehicle_register_date": 0.83,
    "vehicle_seat_number": 0.99,
    "vehicle_shaft": 0.99,
    "vehicle_shaft_weight": 0,
    "vehicle_short_type": 0.87,
    "vehicle_type": 0.99,
  },
  "vehicle_body_type": "รถจักรยานยนต์",
  "vehicle_brand": "HONDA",
  "vehicle_car_weight": "",
  "vehicle_chassis_location": "เสียงใต้ที่นั่ง",
  "vehicle_chassis_number": "HLHJF350XK5629846",
  "vehicle_color": "ดำ",
  "vehicle_displacement": "124.88",
  "vehicle_engine_brand": "HONDA",
  "vehicle_engine_location": "ช้ายเครื่อง",
  "vehicle_engine_number": "JF 35E-0229846",
  "vehicle_fuel_type": "เขนซิน",
  "vehicle_gas_number": "",
  "vehicle_gvw": "",
  "vehicle_hp": "",
  "vehicle_license_number": "9กร 78763กร 7876",
  "vehicle_license_province": "ในหานครกรุงเทพมหานคร",
  "vehicle_model": "CLICK 125 I",
  "vehicle_model_year": "2019",
  "vehicle_piston": "1",
  "vehicle_register_date": "ายน 2511 มิถุนายน 2562",
  "vehicle_seat_number": "2",
  "vehicle_shaft": "- เพลา 2 ล้อ ยาง 2 เส้น",
  "vehicle_shaft_weight": "",
  "vehicle_short_type": "12",
  "vehicle_type": "รถจักรยานยนต์",
}
`;
